...
    if (tokens.isNotEmpty) {
      final first = tokens[0];
      return first.length >= 2
          ? first.substring(0, 2).toUpperCase()
          : first.substring(0, 1).toUpperCase();
    }
    return 'JB';
  }

  @override
  Widget build(BuildContext context) {
    return Container(
      width: size,
...
